style.css
body {
	font-family: "Lato", sans-serif;
}

.sidenav {
	height: 100%;
	width: 20%;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: #01A9DB;
	overflow-x: hidden;
	padding-top: 20px;
}

.profil_image {
	display: block;
	margin-left: 45px;
	width: 70%;
}

.sidenav a {
	padding: 6px 8px 6px 16px;
	text-decoration: none;
	font-size: 25px;
	color: #ffffff;
	display: block;
	text-align: center;
}

.sidenav_title {
	color: #ffffff;
	text-align: center;
	margin-left: 5%;
	margin-right: 5%;
}
.sidenav_text{
	color: #ffffff;
	text-align: justify;
	margin-left: 5%;
	margin-right: 5%;
}

.sidenav_coord{
	color: #ffffff;
	margin-left: -5%;
}

.projects_frame {
	color: #ffffff;
	display: block;
	background-color: White;
	width:100%;
	height:100%;
}

.sidenav a:hover {
	color: #f1f1f1;
}

.main {
	margin-left: 20%;
	font-size: 28px;
	padding: 0px 10px;
}

.project {
	position: relative;
	display: block;
	margin : 10px;
}

.desc {
	width:50%;
	display: inline-block;
}

.project_title {
	color: Black;
	display: block;
}

.project_description {
	color: Black;
	display: inline-block;
	text-align: justify;
	width : 95%
}

.project_separator{
	margin-top:50px;
	width: 50%;
}

.image {
	position: relative;
	margin-left: 5%;
	width: 40%;
	display: inline;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

